fixed Headings are not structured issue

--- a/business-profile.html
+++ b/business-profile.html
@@ -111,7 +111,7 @@
 
                             </div>
                             <hr />
-                            <h4 class="m-b-0">Conncet with us:</h4>
+                            <h2 class="h4 m-b-0">Conncet with us:</h2>
                             <ul class="m-t-0 list-inline list-unstyled social">
                                 <li class="list-inline-item"><a href=""><span class="ca-gov-icon-twitter text-white"><span class="sr-only">Twitter DMV</span></span></a></li>
                                 <li class="list-inline-item"><a href=""><span class="ca-gov-icon-facebook text-white"><span class="sr-only">Facebook DMV</span></span></a></li>
