--- a/general-landing.html
+++ b/general-landing.html
@@ -103,12 +103,12 @@
 
                                 <header class="w-100 text-center absolute-centered p-x">
                                     <span class="btn btn-xs btn-primary rounded-0" href="#">CalHR</span>
-                                    <h4 class="m-y-sm">
+                                    <h3 class="h4 m-y-sm">
                                         Find a Job
                                     </h4>
 
                                     <small class="color-white">
-                                        <i class="ca-gov-icon-time pos-rel"></i> July 04, 2016
+                                        <span class="ca-gov-icon-time pos-rel"></span> July 04, 2016
                                     </small>
                                 </header>
 
@@ -125,12 +125,12 @@
 
                                 <header class="w-100 text-center absolute-centered p-x">
                                     <span class="btn btn-xs btn-primary rounded-0" href="#">EDD</span>
-                                    <h4 class="m-y-sm">
+                                    <h3 class="h4 m-y-sm">
                                         File for Unemployment
-                                    </h4>
+                                    </h3>
 
                                     <small class="color-white">
-                                        <i class="ca-gov-icon-time pos-rel"></i> July 04, 2016
+                                        <span class="ca-gov-icon-time pos-rel"></span> July 04, 2016
                                     </small>
                                 </header>
 
@@ -147,12 +147,12 @@
 
                                 <header class="w-100 text-center absolute-centered p-x">
                                     <span class="btn btn-xs btn-primary rounded-0" href="#">EDD</span>
-                                    <h4 class="m-y-sm">
+                                    <h3 class="h4 m-y-sm">
                                         File for paid family leave insurance
-                                    </h4>
+                                    </h3>
 
                                     <small class="color-white">
-                                        <i class="ca-gov-icon-time pos-rel"></i> July 04, 2016
+                                        <span class="ca-gov-icon-time pos-rel"></span> July 04, 2016
                                     </small>
                                 </header>
 
