--- a/sample/cards.html
+++ b/sample/cards.html
@@ -66,7 +66,7 @@
                         <h1>Cards</h1>
                         <p>A card is a flexible and extensible content container. It includes options for headers and footers, a wide variety of content, contextual background colors, and powerful display options.</p>
                         <p>Cards require a small amount of markup and classes to provide you with as much control as possible. These classes and markup are flexible though and can typically be remixed and extended with ease. For example, if your card has no flush content like images, feel free to put the <code>.card-block</code> class on the <code>.card element</code> to consolidate your markup.</p>
-                        <h3>Example:</h3>
+                        <h2 class="h3">Example:</h2>
                         <!--#include virtual="/sample/modules/cards.html" -->
                         <!-- Trigger the modal with a button -->
                         <button type="button" class="btn btn-default btn-sm m-t" data-toggle="modal" data-target="#cards">Show Source Code</button>
@@ -100,11 +100,11 @@
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h4 class="modal-title">HTML Markup</h4>
+                                        <h3 class="h4 modal-title">HTML Markup</h3>
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     </div>
                                     <div class="modal-body">
-                                        <h4>Source Code:</h4>
+                                        <h3 class="h4">Source Code:</h3>
                                         <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/card-image.html" --></code></pre>
                                     </div>
                                     <div class="modal-footer">
@@ -141,11 +141,11 @@
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h4 class="modal-title">HTML Markup</h4>
+                                <h3 class="h4 modal-title">HTML Markup</h3>
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                             </div>
                             <div class="modal-body">
-                                <h4>Source Code:</h4>
+                                <h3 class="h4">Source Code:</h3>
                                 <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/card-deck.html" --></code></pre>
                             </div>
                             <div class="modal-footer">
@@ -167,11 +167,11 @@
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h4 class="modal-title">HTML Markup</h4>
+                                <h3 class="h4 modal-title">HTML Markup</h3>
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                             </div>
                             <div class="modal-body">
-                                <h4>Source Code:</h4>
+                                <h3 class="h4">Source Code:</h3>
                                 <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/card-photo.html" --></code></pre>
                             </div>
                             <div class="modal-footer">
