--- a/sample/colorscheme-delta.html
+++ b/sample/colorscheme-delta.html
@@ -175,7 +175,7 @@
                                     <div class="color" style="background-color:#A5BDC5;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-highlight<br />@color-p1</h4>HEX: #A5BDC5<br>RGB: 165,189,197</div>
+                            <div class="caption"><h3 class="h4">.color-highlight<br />@color-p1</h3>HEX: #A5BDC5<br>RGB: 165,189,197</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -183,7 +183,7 @@
                                     <div class="color" style="background-color:#577786;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-primary<br />@color-p2</h4>HEX: #577786<br />RGB: 87,119,134</div>
+                            <div class="caption"><h3 class="h3">.color-primary<br />@color-p2</h3>HEX: #577786<br />RGB: 87,119,134</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -191,7 +191,7 @@
                                     <div class="color" style="background-color:#46565E;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-standout<br />@color-p3</h4>HEX: #46565E<br />RGB: 70,86,94</div>
+                            <div class="caption"><h3 class="h4">.color-standout<br />@color-p3</h3>HEX: #46565E<br />RGB: 70,86,94</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -199,14 +199,14 @@
                                     <div class="color" style="background-color:#f5f9fa;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-s1<br />@color-s1</h4>HEX: #f5f9fa<br />RGB: 245,249,250</div>
+                            <div class="caption"><h3 class="h4">.color-s1<br />@color-s1</h3>HEX: #f5f9fa<br />RGB: 245,249,250</div>
                         </div>
                     </div>
 
 
                     <div class="card card-understated">
                         <div class="card-heading">
-                            <h4><span class="ca-gov-icon-info"></span> Theme Colors Customization</h4>
+                            <h2 class="h4"><span class="ca-gov-icon-info"></span> Theme Colors Customization</h2>
                         </div>
                         <div class="card-body">
                             <p>
