--- a/sample/colorscheme-santacruz.html
+++ b/sample/colorscheme-santacruz.html
@@ -175,7 +175,7 @@
                                     <div class="color" style="background-color:#f5811b;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-highlight<br />@color-p1</h4>HEX: #f5811b<br>RGB: 245,129,27</div>
+                            <div class="caption"><h3 class="h4">.color-highlight<br />@color-p1</h3>HEX: #f5811b<br>RGB: 245,129,27</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -183,7 +183,7 @@
                                     <div class="color" style="background-color:#0f4f94;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-primary<br />@color-p2</h4>HEX: #0f4f94<br />RGB: 15,79,148</div>
+                            <div class="caption"><h3 class="h4">.color-primary<br />@color-p2</h3>HEX: #0f4f94<br />RGB: 15,79,148</div>
                         </div>
 
                         <div class="quarter">
@@ -192,7 +192,7 @@
                                     <div class="color" style="background-color:#2c2c4f;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-standout<br />@color-p3</h4>HEX: #2c2c4f<br />RGB: 44,44,79</div>
+                            <div class="caption"><h3 class="h4">.color-standout<br />@color-p3</h3>HEX: #2c2c4f<br />RGB: 44,44,79</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -200,14 +200,14 @@
                                     <div class="color" style="background-color:#E1ECF7;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-s1<br />@color-s1</h4>HEX: #E1ECF7<br />RGB: 225,236,247</div>
+                            <div class="caption"><h3 class="h4">.color-s1<br />@color-s1</h3>HEX: #E1ECF7<br />RGB: 225,236,247</div>
                         </div>
                     </div>
 
 
                     <div class="card card-understated">
                         <div class="card-heading">
-                            <h4><span class="ca-gov-icon-info"></span> Theme Colors Customization</h4>
+                            <h2 class="h4"><span class="ca-gov-icon-info"></span> Theme Colors Customization</h2>
                         </div>
                         <div class="card-body">
                             <p>
