--- a/sample/colorscheme-trinity.html
+++ b/sample/colorscheme-trinity.html
@@ -175,7 +175,7 @@
                                     <div class="color" style="background-color:#c19e73;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-highlight<br />@color-p1</h4>HEX: #c19e73<br>RGB: 193,158,115</div>
+                            <div class="caption"><h3 class="h4">.color-highlight<br />@color-p1</h3>HEX: #c19e73<br>RGB: 193,158,115</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -183,7 +183,7 @@
                                     <div class="color" style="background-color:#446a7c;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-primary<br />@color-p2</h4>HEX: #446a7c<br />RGB: 68,106,124</div>
+                            <div class="caption"><h3 class="h4">.color-primary<br />@color-p2</h3>HEX: #446a7c<br />RGB: 68,106,124</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -191,7 +191,7 @@
                                     <div class="color" style="background-color:#21272a;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-standout<br />@color-p3</h4>HEX: #21272a<br />RGB: 33,39,42</div>
+                            <div class="caption"><h3 class="h4">.color-standout<br />@color-p3</h3>HEX: #21272a<br />RGB: 33,39,42</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -199,14 +199,14 @@
                                     <div class="color" style="background-color:#f9f8f8;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-s1<br />@color-s1</h4>HEX: #f9f8f8<br />RGB: 249,248,248</div>
+                            <div class="caption"><h3 class="h4">.color-s1<br />@color-s1</h3>HEX: #f9f8f8<br />RGB: 249,248,248</div>
                         </div>
                     </div>
 
 
                     <div class="card card-understated">
                         <div class="card-heading">
-                            <h4><span class="ca-gov-icon-info"></span> Theme Colors Customization</h4>
+                            <h2 class="h4"><span class="ca-gov-icon-info"></span> Theme Colors Customization</h2>
                         </div>
                         <div class="card-body">
                             <p>
