--- a/sample/gallery.html
+++ b/sample/gallery.html
@@ -79,7 +79,7 @@ var defaultActiveLink = "Components";
                     Two gallery styles are available for use in the sidebar. The small gallery uses a class of <code>.gallery-small</code> and the sliding gallery uses a class of <code>.carousel-gallery</code>.
                     <div class="card card-standout">
                         <div class="card-heading">
-                            <h4><span class="ca-gov-icon-info"></span>Small Example</h4>
+                            <h3 class="h4"><span class="ca-gov-icon-info"></span>Small Example</h3>
                         </div>
                         <div class="card-body">
                             <!--#include virtual="/sample/modules/gallery-small.html" -->
@@ -93,7 +93,7 @@ var defaultActiveLink = "Components";
 
                     <div class="card card-standout">
                         <div class="card-heading">
-                            <h4><span class="ca-gov-icon-info"></span>Slider Gallery Example</h4>
+                            <h3 class="h4">span class="ca-gov-icon-info"></span>Slider Gallery Example</h3>
                         </div>
                         <div class="card-body">
                             <!--#include virtual="/sample/modules/carousel-gallery.html" -->
