--- a/sample/layout-news.html
+++ b/sample/layout-news.html
@@ -88,9 +88,9 @@
                                     </li>
                                 </ul>
 
-                                <h4 class="m-t-0 m-b-sm">
+                                <h3 class="h4 m-t-0 m-b-sm">
                                     <a class="u-link-v5 color-gray-dark color-primary-hover" href="#">Incredible standard post</a>
-                                </h4>
+                                </h3>
 
                                 <p>Nullam elementum tincidunt massa, a pulvinar leo ultricies ut. Ut fringilla lectus tellusimp imperdiet molestie est volutpat at. Sed viverra cursus nibh.</p>
 
@@ -99,12 +99,12 @@
                                 <ul class="list-inline m-y-0">
                                     <li class="list-inline-item m-r m-y-0">
                                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#" aria-label="Email DMV">
-                                            <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
+                                            <span class="ca-gov-icon-email"></span><span class="sr-only">Email</span>
                                         </a>
                                     </li>
                                     <li class="list-inline-item m-r m-y-0">
                                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
-                                            <i class="ca-gov-icon-youtube"></i><span class="sr-only">Share</span>
+                                            <span class="ca-gov-icon-youtube"></span><span class="sr-only">Share</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -136,9 +136,9 @@
                                     </li>
                                 </ul>
 
-                                <h4 class="m-t-0 m-b-sm">
+                                <h3 class="h4 m-t-0 m-b-sm">
                                     <a class="u-link-v5 color-gray-dark color-primary-hover" href="#">Demperdiet molesti volutpa</a>
-                                </h4>
+                                </h3>
 
                                 <p>Nullam elementum tincidunt massa, a pulvinar leo ultricies ut. Ut fringilla lectus tellusimp imperdiet molestie est volutpat at. Sed viverra cursus nibh.</p>
 
@@ -147,12 +147,12 @@
                                 <ul class="list-inline m-y-0">
                                     <li class="list-inline-item m-r m-y-0">
                                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#" aria-label="Email CDT">
-                                            <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
+                                            <span class="ca-gov-icon-email"></span><span class="sr-only">Email</span>
                                         </a>
                                     </li>
                                     <li class="list-inline-item m-r m-y-0">
                                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
-                                            <i class="ca-gov-icon-twitter"></i><span class="sr-only">Share</span>
+                                            <span class="ca-gov-icon-twitter"></span><span class="sr-only">Share</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -184,9 +184,9 @@
                                     </li>
                                 </ul>
 
-                                <h4 class="m-t-0 m-b-sm">
+                                <h3 class="h4 m-t-0 m-b-sm">
                                     <a class="u-link-v5 color-gray-dark color-primary-hover" href="#">Nullam non metus inmi</a>
-                                </h4>
+                                </h3>
 
                                 <p>Nullam elementum tincidunt massa, a pulvinar leo ultricies ut. Ut fringilla lectus tellusimp imperdiet molestie est volutpat at. Sed viverra cursus nibh.</p>
 
@@ -195,12 +195,12 @@
                                 <ul class="list-inline m-y-0">
                                     <li class="list-inline-item m-r m-y-0">
                                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#" aria-label="Email CDTFA">
-                                            <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
+                                            <span class="ca-gov-icon-email"></span><span class="sr-only">Email</span>
                                         </a>
                                     </li>
                                     <li class="list-inline-item m-r m-y-0">
                                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
-                                            <i class="ca-gov-icon-facebook"></i><span class="sr-only">Share</span>
+                                            <span class="ca-gov-icon-facebook"></span><span class="sr-only">Share</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -243,12 +243,12 @@
                                 <ul class="list-inline m-y-0">
                                     <li class="list-inline-item m-r m-y-0">
                                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#" aria-label="Email CDTFA">
-                                            <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
+                                            <span class="ca-gov-icon-email"></span><span class="sr-only">Email</span>
                                         </a>
                                     </li>
                                     <li class="list-inline-item m-r m-y-0">
                                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
-                                            <i class="ca-gov-icon-instagram"></i><span class="sr-only">Share</span>
+                                            <span class="ca-gov-icon-instagram"></span><span class="sr-only">Share</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -275,12 +275,12 @@
 
                             <header class="w-100 text-center absolute-centered p-x">
                                 <span class="btn btn-xs btn-primary rounded-0">DMV</span>
-                                <h4 class="m-y-sm">
+                                <h3 class="h4 m-y-sm">
                                     Incredible Image post
-                                </h4>
+                                </h3>
 
                                 <small class="color-white">
-                                    <i class="ca-gov-icon-time pos-rel"></i> July 04, 2016
+                                    <span class="ca-gov-icon-time pos-rel"></span> July 04, 2016
                                 </small>
                             </header>
 
@@ -298,12 +298,12 @@
 
                             <header class="w-100 text-center absolute-centered p-x">
                                 <span class="btn btn-xs btn-primary rounded-0">CDT</span>
-                                <h4 class="m-y-sm">
+                                <h3 class="h4 m-y-sm">
                                     Demperdiet molesti volutpa
-                                </h4>
+                                </h3>
 
                                 <small class="color-white">
-                                    <i class="ca-gov-icon-time pos-rel"></i> July 08, 2020
+                                    <span class="ca-gov-icon-time pos-rel"></span> July 08, 2020
                                 </small>
                             </header>
 
@@ -321,12 +321,12 @@
 
                             <header class="w-100 text-center absolute-centered p-x">
                                 <span class="btn btn-xs btn-primary rounded-0">CDTFA</span>
-                                <h4 class="m-y-sm">
+                                <h3 class="h4 m-y-sm">
                                     Nullam non metus inmi
-                                </h4>
+                                </h3>
 
                                 <small class="color-white">
-                                    <i class="ca-gov-icon-time pos-rel"></i> July 12, 2020
+                                    <span class="ca-gov-icon-time pos-rel"></span> July 12, 2020
                                 </small>
                             </header>
 
@@ -344,12 +344,12 @@
 
                             <header class="w-100 text-center absolute-centered p-x">
                                 <span class="btn btn-xs btn-primary rounded-0">EDD</span>
-                                <h4 class="m-y-sm">
+                                <h3 class="h4 m-y-sm">
                                     Nullam non metus
-                                </h4>
+                                </h3>
 
                                 <small class="color-white">
-                                    <i class="ca-gov-icon-time pos-rel"></i> September 04, 2020
+                                    <span class="ca-gov-icon-time pos-rel"></span> September 04, 2020
                                 </small>
                             </header>
 
