--- a/sample/layout-profile.html
+++ b/sample/layout-profile.html
@@ -121,23 +121,23 @@
                         </div>
 
 
-                        <h3 class="m-y-md">Projects Progress</h3>
-                        <h6 class="m-b-sm">Web Design <span class="float-right ml-10">73%</span></h6>
+                        <h2 class="m-y-md h3">Projects Progress</h2>
+                        <h3 class="m-b-sm h6">Web Design <span class="float-right ml-10">73%</span></h3>
                         <div class="progress height-5 m-b-md">
                             <div class="progress-bar bg-success" role="progressbar" style="width: 73%" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
 
-                        <h6 class="m-b-sm">Development <span class="float-right ml-10">34%</span></h6>
+                        <h3 class="h6 m-b-sm">Development <span class="float-right ml-10">34%</span></h3>
                         <div class="progress height-5 m-b-md">
                             <div class="progress-bar bg-standout" role="progressbar" style="width: 34%" aria-valuenow="34" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
 
-                        <h6 class="m-b-sm">WordPress Coding <span class="float-right ml-10">46%</span></h6>
+                        <h3 class="h6 m-b-sm">WordPress Coding <span class="float-right ml-10">46%</span></h3>
                         <div class="progress height-5 m-b-md">
                             <div class="progress-bar bg-primary" role="progressbar" style="width: 46%" aria-valuenow="46" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
 
-                        <h6 class="m-b-sm">Accessibility <span class="float-right ml-10">85%</span></h6>
+                        <h3 class="h6 m-b-sm">Accessibility <span class="float-right ml-10">85%</span></h3>
                         <div class="progress height-5 m-b-md">
                             <div class="progress-bar bg-danger" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
@@ -189,7 +189,7 @@
                         <div class="card overflow-visible">
                             <!-- Panel Header -->
                             <div class="card-heading bg-grey-lightest">
-                                <h4><span class="ca-gov-icon-briefcase" aria-hidden="true"></span> Experience</h4>
+                                <h2 class="h4"><span class="ca-gov-icon-briefcase" aria-hidden="true"></span> Experience</h2>
                                 <div class="options">
                                     <button class="border-0 bg-grey-lightest bg-grey-lightest-hover" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="ca-gov-icon-menu text-1-5rem color-gray" aria-hidden="true"></span><span class="sr-only">option</span></button>
 
@@ -221,8 +221,8 @@
                                         <div class="row">
                                             <!-- Timeline Date -->
                                             <div class="col-md-3 align-self-center text-md-right p-r-md">
-                                                <h4 class="h5 m-b-0">Project Manager</h4>
-                                                <h5 class="h6 m-t-sm">2016 - Current</h5>
+                                                <h3 class="h5 m-b-0">Project Manager</h3>
+                                                <h3 class="h6 m-t-sm">2016 - Current</h3>
                                             </div>
                                             <!-- End Timeline Date -->
                                             <!-- Timeline Content -->
@@ -245,8 +245,8 @@
                                         <div class="row">
                                             <!-- Timeline Date -->
                                             <div class="col-md-3 align-self-center text-md-right p-r-md">
-                                                <h4 class="h5 m-b-0">Full Stack Developer</h4>
-                                                <h5 class="h6 m-t-sm">2014 - 2016</h5>
+                                                <h3 class="h5 m-b-0">Full Stack Developer</h3>
+                                                <h3 class="h6 m-t-sm">2014 - 2016</h3>
                                             </div>
                                             <!-- End Timeline Date -->
                                             <!-- Timeline Content -->
@@ -268,8 +268,8 @@
                                         <div class="row">
                                             <!-- Timeline Date -->
                                             <div class="col-md-3 align-self-center text-md-right p-r-md">
-                                                <h4 class="h5 m-b-0">Frontend Developer</h4>
-                                                <h5 class="h6 m-t-sm">2012 - 2014</h5>
+                                                <h3 class="h5 m-b-0">Frontend Developer</h3>
+                                                <h3 class="h6 m-t-sm">2012 - 2014</h3>
                                             </div>
                                             <!-- End Timeline Date -->
                                             <!-- Timeline Content -->
@@ -291,8 +291,8 @@
                                         <div class="row">
                                             <!-- Timeline Date -->
                                             <div class="col-md-3 align-self-center text-md-right p-r-md">
-                                                <h4 class="h5 m-b-0">UX/UI Designer</h4>
-                                                <h5 class="h6 m-t-sm">2010 - 2012</h5>
+                                                <h3 class="h5 m-b-0">UX/UI Designer</h3>
+                                                <h3 class="h6 m-t-sm">2010 - 2012</h3>
                                             </div>
                                             <!-- End Timeline Date -->
                                             <!-- Timeline Content -->
@@ -322,7 +322,7 @@
                         <div class="card overflow-visible">
                             <!-- Panel Header -->
                             <div class="card-heading bg-grey-lightest">
-                                <h4><span class="ca-gov-icon-graduate" aria-hidden="true"></span> Education</h4>
+                                <h2 class="h4"><span class="ca-gov-icon-graduate" aria-hidden="true"></span> Education</h4>
                                 <div class="options">
                                     <button class="border-0 bg-grey-lightest bg-grey-lightest-hover" type="button" id="dropdownMenuButton2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="ca-gov-icon-menu text-1-5rem color-gray" aria-hidden="true"></span><span class="sr-only">option</span></button>
 
@@ -348,8 +348,8 @@
                                         <div class="row">
                                             <!-- Timeline Date -->
                                             <div class="col-md-3 align-self-center text-md-right p-r-md">
-                                                <h4 class="h5 m-b-0">MBA</h4>
-                                                <h5 class="h6 m-t-sm">2008 - 2010</h5>
+                                                <h3 class="h5 m-b-0">MBA</h3>
+                                                <h3 class="h6 m-t-sm">2008 - 2010</h3>
                                             </div>
                                             <!-- End Timeline Date -->
                                             <!-- Timeline Content -->
@@ -372,8 +372,8 @@
                                         <div class="row">
                                             <!-- Timeline Date -->
                                             <div class="col-md-3 align-self-center text-md-right p-r-md">
-                                                <h4 class="h5 m-b-0">Bachelor of IT</h4>
-                                                <h5 class="h6 m-t-sm">2004 - 2008</h5>
+                                                <h3 class="h5 m-b-0">Bachelor of IT</h3>
+                                                <h3 class="h6 m-t-sm">2004 - 2008</h3>
                                             </div>
                                             <!-- End Timeline Date -->
                                             <!-- Timeline Content -->
@@ -395,8 +395,8 @@
                                         <div class="row">
                                             <!-- Timeline Date -->
                                             <div class="col-md-3 align-self-center text-md-right p-r-md">
-                                                <h4 class="h5 m-b-0">High School</h4>
-                                                <h5 class="h6 m-t-sm">2001 - 2004</h5>
+                                                <h3 class="h5 m-b-0">High School</h3>
+                                                <h3 class="h6 m-t-sm">2001 - 2004</h3>
                                             </div>
                                             <!-- End Timeline Date -->
                                             <!-- Timeline Content -->
