--- a/sample/location-widgets.html
+++ b/sample/location-widgets.html
@@ -151,7 +151,7 @@ var defaultActiveLink = "Components";
 
                 <div class="card card-overstated">
                     <div class="card-heading">
-                        <h4><span class="ca-gov-icon-road-pin"></span> Mini Locations</h4>
+                        <h2 class="h4"><span class="ca-gov-icon-road-pin"></span> Mini Locations</h2>
                     </div>
                     <div class="card-body">
                         <!--#include virtual="/sample/modules/location-mini.html" -->
