--- a/sample/modules/timeline.html
+++ b/sample/modules/timeline.html
@@ -2,7 +2,7 @@
 <div class="card overflow-visible">
     <!-- Panel Header -->
     <div class="card-heading bg-grey-lightest">
-        <h4><span class="ca-gov-icon-briefcase" aria-hidden="true"></span> Experience</h4>
+        <h3 class="h4"><span class="ca-gov-icon-briefcase" aria-hidden="true"></span> Experience</h3>
     </div>
     <!-- End Panel Header -->
     <!-- Panel Body -->
