--- a/sample/navsamples.html
+++ b/sample/navsamples.html
@@ -89,7 +89,7 @@ Based on Twitter Bootstrap
                 </main>
             </div>
             <div class="col-md-4 p-t-lg" role="complementary">
-                <h3>Other examples:</h3>
+                <h2 class="h3">Other examples:</h2>
                 <!-- Side navigation -->
                 <div class="accordion-list list-group">
                     <a href="/sample/layouts.html" class="list-group-item list-group-item-action"><span class="ca-gov-icon-responsive-alt" aria-hidden="true"></span> Page Layouts</a>
