--- a/sample/tabs.html
+++ b/sample/tabs.html
@@ -71,7 +71,7 @@ var defaultActiveLink = "Components";
                         <p>
                             Tabs lets you create content using an <code>ul</code> list of links that are linked to an unique <code>id</code> of a <code>section</code> elements with each tab having its own content. Wrapping all of it is a <code>div</code> with <code>tabs</code> class.
                         </p>
-                        <h4 class="m-b-sm">Keyboard navigation</h4>
+                        <h2 class="h4 m-b-sm">Keyboard navigation</h2>
                         <p>
                             The user is able to select and activate tabs using the left and right <strong>arrow keys</strong>, while the <strong>Tab</strong> key is preserved for focusing contents within and below the active tab panel. Pressing <strong>Shift + Tab</strong> returns the user to the selected tab.
                         </p>
