--- a/sample/typography.html
+++ b/sample/typography.html
@@ -76,7 +76,7 @@ var defaultActiveLink = "Components";
 
                 <div class="group">
                     <div class="half">
-                        <h4>Source Sans Pro</h4>
+                        <h3 class="h4">Source Sans Pro</h3>
                         <p>
                             Source Sans Pro is an open-source sans serif typeface created for legibility in UI design.
                             With a variety of weights that read easily at all sizes, Source Sans Pro provides clear
@@ -104,7 +104,7 @@ var defaultActiveLink = "Components";
 
                 <div class="group">
                     <div class="half">
-                        <h4>Asap Condensed</h4>
+                        <h3 class="h4">Asap Condensed</h3>
                         <p>
                             Asap Condensed is an open-source sans serif typeface that in this template is used in page headings.
                             It's a contemporary sans-serif family with subtle rounded corners. 
