--- a/ssi/news.html
+++ b/ssi/news.html
@@ -24,9 +24,9 @@
                         </li>
                     </ul>
 
-                    <h4 class="m-t-0 m-b-sm">
+                    <h3 class="h4 m-t-0 m-b-sm">
                         <a class="u-link-v5 color-gray-dark color-primary-hover" href="#">Incredible standard post</a>
-                    </h4>
+                    </h3>
 
                     <p>Nullam elementum tincidunt massa, a pulvinar leo ultricies ut. Ut fringilla lectus tellusimp imperdiet molestie est volutpat at. Sed viverra cursus nibh.</p>
 
@@ -35,12 +35,12 @@
                     <ul class="list-inline m-y-0">
                         <li class="list-inline-item m-r m-y-0">
                             <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#" aria-label="Email DMV">
-                                <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
+                                <span class="ca-gov-icon-email pos-rel bottom-minus-2"></span><span class="sr-only">Email</span>
                             </a>
                         </li>
                         <li class="list-inline-item m-r m-y-0">
                             <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
-                                <i class="ca-gov-icon-youtube"></i><span class="sr-only">Share</span>
+                                <span class="ca-gov-icon-youtube  pos-rel bottom-minus-2"></span><span class="sr-only">Share</span>
                             </a>
                         </li>
                     </ul>
@@ -72,9 +72,9 @@
                         </li>
                     </ul>
 
-                    <h4 class="m-t-0 m-b-sm">
+                    <h3 class="h4 m-t-0 m-b-sm">
                         <a class="u-link-v5 color-gray-dark color-primary-hover" href="#">Demperdiet molesti volutpa</a>
-                    </h4>
+                    </h3>
 
                     <p>Nullam elementum tincidunt massa, a pulvinar leo ultricies ut. Ut fringilla lectus tellusimp imperdiet molestie est volutpat at. Sed viverra cursus nibh.</p>
 
@@ -83,12 +83,12 @@
                     <ul class="list-inline m-y-0">
                         <li class="list-inline-item m-r m-y-0">
                             <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#" aria-label="Email CDT">
-                                <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
+                                <span class="ca-gov-icon-email pos-rel bottom-minus-2"></span><span class="sr-only">Email</span>
                             </a>
                         </li>
                         <li class="list-inline-item m-r m-y-0">
                             <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
-                                <i class="ca-gov-icon-twitter"></i><span class="sr-only">Share</span>
+                                <span class="ca-gov-icon-twitter pos-rel bottom-minus-2"></span><span class="sr-only">Share</span>
                             </a>
                         </li>
                     </ul>
@@ -120,9 +120,9 @@
                         </li>
                     </ul>
 
-                    <h4 class="m-t-0 m-b-sm">
+                    <h3 class="h4 m-t-0 m-b-sm">
                         <a class="u-link-v5 color-gray-dark color-primary-hover" href="#">Nullam non metus inmi</a>
-                    </h4>
+                    </h3>
 
                     <p>Nullam elementum tincidunt massa, a pulvinar leo ultricies ut. Ut fringilla lectus tellusimp imperdiet molestie est volutpat at. Sed viverra cursus nibh.</p>
 
@@ -131,12 +131,12 @@
                     <ul class="list-inline m-y-0">
                         <li class="list-inline-item m-r m-y-0">
                             <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#" aria-label="Email CDTFA">
-                                <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
+                                <span class="ca-gov-icon-email pos-rel bottom-minus-2"></span><span class="sr-only">Email</span>
                             </a>
                         </li>
                         <li class="list-inline-item m-r m-y-0">
                             <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
-                                <i class="ca-gov-icon-facebook"></i><span class="sr-only">Share</span>
+                                <span class="ca-gov-icon-facebook pos-rel bottom-minus-2"></span><span class="sr-only">Share</span>
                             </a>
                         </li>
                     </ul>
