--- a/ssi/section-footer2.html
+++ b/ssi/section-footer2.html
@@ -11,7 +11,7 @@
                         </div>
                         <div class="media-body">
                             <!-- Figure Info -->
-                            <h4 class="m-0">Gavin Newsom</h4>
+                            <h3 class="h4 m-0">Gavin Newsom</h3>
                             <div class="d-block">
                                 <span class="font-size-13">California Governor</span>
 
@@ -35,7 +35,7 @@
                     </div>
                     <div class="media-body">
                         <!-- Figure Info -->
-                        <h4 class="m-0">Yolanda Richardson</h4>
+                        <h3 class="h4 m-0">Yolanda Richardson</h3>
                         <div class="d-block">
                             <span class="font-size-13">Secretary, Government Operations Agency</span>
 
@@ -51,7 +51,7 @@
             </div>
 
             <div class="col-lg-3">
-                <h4>State Wide Campaigns</h4>
+                <h3 class="h4">State Wide Campaigns</h3>
                 <ul class="list-standout">
                     <li><a href="http://registertovote.ca.gov/" class="text-white">Register to vote</a></li>
                     <li><a href="http://saveourwater.com/" class="text-white">Save Our Water</a></li>
@@ -62,7 +62,7 @@
             </div>
 
             <div class="col-lg-2">
-                <h4>Support</h4>
+                <h3 class="h4">Support</h3>
                 <ul class="list-unstyled">
                     <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Email <span class="sr-only">Us</span></a></li>
                     <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Feedback Survey</a></li>
@@ -73,7 +73,7 @@
             </div>
 
             <div class="col-lg-3">
-                <h4>Awards</h4>
+                <h3 class="h4">Awards</h3>
                 <ul class="list-unstyled">
                     <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-check-line"></span>Best of the Web</a></li>
                     <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-check-line"></span>Center for Digital Governement</a></li>
