--- a/sample/colorscheme-sacramento.html
+++ b/sample/colorscheme-sacramento.html
@@ -178,7 +178,7 @@
                                     <div class="color" style="background-color:#7bb0da;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-highlight<br />@color-p1</h4>HEX: #7bb0da<br>RGB: 123,176,218</div>
+                            <div class="caption"><h3 class="h4">.color-highlight<br />@color-p1</h3>HEX: #7bb0da<br>RGB: 123,176,218</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -186,7 +186,7 @@
                                     <div class="color" style="background-color:#153554;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-primary<br />@color-p2</h4>HEX: #153554<br />RGB: 21,53,84</div>
+                            <div class="caption"><h3 class="h4">.color-primary<br />@color-p2</h3>HEX: #153554<br />RGB: 21,53,84</div>
                         </div>
 
                         <div class="quarter">
@@ -195,7 +195,7 @@
                                     <div class="color" style="background-color:#730000;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-standout<br />@color-p3</h4>HEX: #730000<br />RGB: 115,0,0</div>
+                            <div class="caption"><h3 class="h4">.color-standout<br />@color-p3</h3>HEX: #730000<br />RGB: 115,0,0</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -203,13 +203,13 @@
                                     <div class="color" style="background-color:#e1ecf7;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-s1<br />@color-s1</h4>HEX: #e1ecf7<br />RGB: 225,236,247</div>
+                            <div class="caption"><h3 class="h4">.color-s1<br />@color-s1</h3>HEX: #e1ecf7<br />RGB: 225,236,247</div>
                         </div>
                     </div>
 
                     <div class="card card-understated">
                         <div class="card-heading">
-                            <h4><span class="ca-gov-icon-info"></span> Theme Colors Customization</h4>
+                            <h2 class="h4"><span class="ca-gov-icon-info"></span> Theme Colors Customization</h2>
                         </div>
                         <div class="card-body">
                             <p>
