--- a/sample/countdown.html
+++ b/sample/countdown.html
@@ -87,7 +87,7 @@
 
                     <hr>
 
-            <h3>Countdown primary</h3>
+            <h2 class="h3">Countdown primary</h2>
                     
 
                     <div class="row section-primary countdown">
@@ -117,11 +117,11 @@
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">HTML Markup</h4>
+                            <h3 class="h4 modal-title">HTML Markup</h3>
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
                         <div class="modal-body">
-                            <h4>Source Code:</h4>
+                            <h3 class="h4">Source Code:</h3>
 
                             <div class="tab-group">
                                 <span class="ca-gov-icon-favorite"></span>
@@ -202,7 +202,7 @@
 
             <hr />
 
-                    <h3>Countdown default</h3>
+                    <h2 class="h3">Countdown default</h2>
                     <div class="row section-default countdown">
                         <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
                             <span class="countdown-text">days<br></span>
@@ -234,11 +234,11 @@
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">HTML Markup</h4>
+                            <h3 class="h4 modal-title">HTML Markup</h3>
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
                         <div class="modal-body">
-                            <h4>Source Code:</h4>
+                            <h3 class="h4">Source Code:</h3>
 
                             <div class="tab-group">
                                 <span class="ca-gov-icon-favorite"></span>
