--- a/sample/layout-services.html
+++ b/sample/layout-services.html
@@ -64,7 +64,7 @@
                     <div class="col-md-6 d-flex">
                         <span class="ca-gov-icon-idea-alt text-2-5rem color-s3" aria-hidden="true"></span>
                         <div class="p-l-md">
-                            <h3 class="h4 m-t"><a href="/sample/index.html">Creative Ideas</a></h3>
+                            <h2 class="h4 m-t"><a href="/sample/index.html">Creative Ideas</a></h2>
                             <div class="width-30 brd-top brd-gray p-b"></div>
                             <p>We strive to embrace and drive change in our industry which allows us to keep our clients relevant</p>
                         </div>
@@ -72,7 +72,7 @@
                     <div class="col-md-6 d-flex">
                         <span class="ca-gov-icon-favorite text-2-5rem color-s3" aria-hidden="true"></span>
                         <div class="p-l-md">
-                            <h3 class="h4 m-t"><a href="/sample/index.html">Excellent features</a></h3>
+                            <h2 class="h4 m-t"><a href="/sample/index.html">Excellent features</a></h2>
                             <div class="width-30 brd-top brd-gray p-b"></div>
                             <p>We strive to embrace and drive change in our industry which allows us to keep our clients relevant</p>
                         </div>
@@ -82,7 +82,7 @@
                     <div class="col-md-6 d-flex">
                         <span class="ca-gov-icon-code text-2-5rem color-s3" aria-hidden="true"></span>
                         <div class="p-l-md">
-                            <h3 class="h4 m-t"><a href="/sample/index.html">Clean code</a></h3>
+                            <h2 class="h4 m-t"><a href="/sample/index.html">Clean code</a></h2>
                             <div class="width-30 brd-top brd-gray p-b"></div>
                             <p>We strive to embrace and drive change in our industry which allows us to keep our clients relevant</p>
                         </div>
@@ -90,7 +90,7 @@
                     <div class="col-md-6 d-flex">
                         <span class="ca-gov-icon-page text-2-5rem color-s3" aria-hidden="true"></span>
                         <div class="p-l-md">
-                            <h3 class="h4 m-t"><a href="/sample/index.html">Extensive documentation</a></h3>
+                            <h2 class="h4 m-t"><a href="/sample/index.html">Extensive documentation</a></h2>
                             <div class="width-30 brd-top brd-gray p-b"></div>
                             <p>We strive to embrace and drive change in our industry which allows us to keep our clients relevant</p>
                         </div>
@@ -111,7 +111,7 @@
                             <!-- Icon Blocks -->
                             <div class="shadow2 bg-white text-center p-x-md pb-5">
                                 <span class="icon-block bg-standout-radialgradient rounded-10">
-                                    <i class="ca-gov-icon-albums"></i>
+                                    <span class="ca-gov-icon-albums pos-rel top-20pct"></span>
                                 </span>
                                 <h3 class="h4 m-y-sm">Elegant Design</h3>
                                 <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
@@ -124,7 +124,7 @@
                             <!-- Icon Blocks -->
                             <div class="shadow2 bg-white text-center p-x-md pb-5">
                                 <span class="icon-block bg-standout-radialgradient rounded-10">
-                                    <i class="ca-gov-icon-certificate-check"></i>
+                                    <span class="ca-gov-icon-certificate-check pos-rel top-20pct"></span>
                                 </span>
                                 <h3 class="h4 m-y-sm">ADA Compliant</h3>
                                 <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
@@ -136,7 +136,7 @@
                             <!-- Icon Blocks -->
                             <div class="shadow2 bg-white text-center p-x-md pb-5">
                                 <span class="icon-block bg-standout-radialgradient rounded-10">
-                                    <i class="ca-gov-icon-responsive-alt"></i>
+                                    <span class="ca-gov-icon-responsive-alt pos-rel top-20pct"></span>
                                 </span>
                                 <h3 class="h4 m-y-sm">Fully Responsive</h3>
                                 <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
