--- a/sample/navigation-megamenu-flex.html
+++ b/sample/navigation-megamenu-flex.html
@@ -66,7 +66,7 @@ var defaultActiveLink = "Components";
                     This style of menu can be set by including the <code>.megadropdown</code>
                     class in the <code>&lt;nav&gt;</code> element.
                 </p>
-                <h4>Example:</h4>
+                <h2 class="h4">Example:</h2>
 
                 <pre>&lt;nav id="navigation" class="main-navigation megadropdown"&gt;</pre>
                 <p>
@@ -80,7 +80,7 @@ var defaultActiveLink = "Components";
                     iside of <code>.second-level-nav</code> div.
                 </p>
 
-                <h4>Example:</h4>
+                <h2 class="h4">Example:</h2>
                 <pre>&lt;div class="sub-nav"&gt;
     &lt;div class="second-level-nav flex"&gt;
         &lt;a href="/" class="second-level-link"&gt;Link 1&lt;/a>
@@ -102,14 +102,14 @@ var defaultActiveLink = "Components";
                     or <code>.with-image-right</code> on the div container containing the media.
                 </p>
 
-                <h4>Link with large icon:</h4>
+                <h3 class="h4">Link with large icon:</h4>
 <pre><code><a href="/" class="second-level-link">
     <span class="ca-gov-icon-home font-size-40" aria-hidden="true"></span>
     <p class="h3 sub-nav-link">First Link</p>
     <p class="link-description">Some link description.</p>
 </a>
 </code></pre>
-                <h4>Link with left image:</h4>
+                <h3 class="h4">Link with left image:</h4>
 <pre><code><a href="/" class="second-level-link">
         <div class="media-left">
         <img class="media-object" src="/sample/images/70x70.gif" alt="...">
