--- a/sample/news-list.html
+++ b/sample/news-list.html
@@ -110,7 +110,7 @@ var defaultActiveLink = "Components";
                         <p>Using the <code>.news-item</code> module in the sidebar makes use of the same markup however it omits the <code>.description</code> node for sake of saving space.</p>
                         <div class="card card-standout highlight">
                             <div class="card-heading">
-                                <h4><span class="ca-gov-icon-info"></span> Latest News Headlines</h4>
+                                <h3 class="h4"><span class="ca-gov-icon-info"></span> Latest News Headlines</h3>
                             </div>
                             <div class="card-body">
                                 <!--#include virtual="/sample/modules/news-list-sidebar.html" -->
@@ -124,7 +124,7 @@ var defaultActiveLink = "Components";
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h4 class="modal-title">HTML Markup</h4>
+                                        <h3 class="modal-title">HTML Markup</h3>
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     </div>
                                     <div class="modal-body">
