--- a/sample/panels.html
+++ b/sample/panels.html
@@ -86,7 +86,7 @@ var defaultActiveLink = "Components";
         <div class="main-secondary" role="complementary">
             <h2>Example:</h2>
                 <!--#include virtual="/sample/modules/panels-sidebar.html" -->
-            <h2><label for="sample-panels-sidebar">Source Code:</label></h2>
+            <h3 class="h2"><label for="sample-panels-sidebar">Source Code:</label></h3>
             <div class="form-group">
                 <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/panels-sidebar.html" --></code></pre>
             </div>
