--- a/sample/panes.html
+++ b/sample/panes.html
@@ -80,7 +80,7 @@ var defaultActiveLink = "Components";
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">HTML Markup</h4>
+                            <h3 class="h4 modal-title">HTML Markup</h3>
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                             
                         </div>
