--- a/sample/parallax.html
+++ b/sample/parallax.html
@@ -68,7 +68,7 @@ var defaultActiveLink = "Components";
 
             <div class="parallax-bg" id="parallax-1" data-image-src="/images/background-primary.jpg">
                 <div class="section-impact width-200 height-80 brd-gray-light brd-solid-1 relative-centered">
-                    <h4 class="h3 text-center">SCROLL DOWN</h4>
+                    <h2 class="h3 text-center">SCROLL DOWN</h2>
                 </div>
             </div>
             <div class="parallax-bg height-300" id="parallax-2" data-image-src="/images/bg-open-data.jpg">
@@ -93,7 +93,7 @@ var defaultActiveLink = "Components";
                 <div class="form-group">
 <textarea id="sample-accordion-list" class="form-control" rows="17" cols="80"><div class="parallax-bg" id="parallax-1" data-image-src="/images/background-primary.jpg">
     <div class="section-impact width-200 height-80 brd-gray-light brd-solid-1 relative-centered">
-        <h4 class="h3 text-center">SCROLL DOWN</h4>
+        <h3 class="text-center">SCROLL DOWN</h3>
     </div>
 </div>
 <div class="parallax-bg height-300" id="parallax-2" data-image-src="/images/bg-open-data.jpg">
