--- a/sample/timeline.html
+++ b/sample/timeline.html
@@ -77,12 +77,12 @@ var defaultActiveLink = "Components";
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">HTML Markup</h4>
+                            <h3 class="h4 modal-title">HTML Markup</h3>
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
 
                         </div>
                         <div class="modal-body">
-                            <h4>Source Code:</h4>
+                            <h3 class="h4">Source Code:</h3>
                             <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/timeline.html" --></code></pre>
                         </div>
                         <div class="modal-footer">
